kubernetes/system/job-assistant/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: job-assistant
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
